--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,23 +115,23 @@ elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 	endif()
 	
 	list(APPEND SDK_COMPILER_FLAGS "-Wall" "-Werror" "-pedantic" "-Wextra")
-elseif (CMAKE_CXX_COMPILER MATCHES "mingw")
-	list(APPEND SDK_COMPILER_FLAGS "-fno-exceptions" "-fPIC")
-	if (NOT ENABLE_RTTI)
-		list(APPEND SDK_COMPILER_FLAGS "-fno-rtti")
-	endif()
-	if (ENABLE_COVERAGE)
-		SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
-		SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
-		SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
-	endif()
+#elseif (CMAKE_CXX_COMPILER MATCHES "mingw")
+#	list(APPEND SDK_COMPILER_FLAGS "-fno-exceptions" "-fPIC")
+#	if (NOT ENABLE_RTTI)
+#		list(APPEND SDK_COMPILER_FLAGS "-fno-rtti")
+#	endif()
+#	if (ENABLE_COVERAGE)
+#		SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
+#		SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
+#		SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
+#	endif()
 else()
 	list(APPEND SDK_COMPILER_FLAGS "-fno-exceptions" "-fPIC")
 	if (NOT ENABLE_RTTI)
 	list(APPEND SDK_COMPILER_FLAGS "-fno-rtti")
 	endif()
 	
-	list(APPEND SDK_COMPILER_FLAGS "-Wall" "-Werror" "-pedantic" "-Wextra")
+#	list(APPEND SDK_COMPILER_FLAGS "-Wall" "-Werror" "-pedantic" "-Wextra")
 	
 	if (ENABLE_COVERAGE)
 	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
